# superdev-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  api_logs.txt  docker-compose.yml
src/: main.rs
src/handlers/: health.rs  keypair.rs  message.rs  mod.rs  token.rs  transfer.rs
src/models/: requests.rs  responses.rs
src/routes/: mod.rs
src/utils/: logger.rs  mod.rs  responses.rs
