[package]
name = "superdev"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
solana-client = "1.18"
solana-sdk = "1.18"
dotenv = "0.15" 